--- a/website/templates/create-item.html
+++ b/website/templates/create-item.html
@@ -32,6 +32,10 @@
 						<label for="adddex">Add Dex?</label>
 						<input id="adddex" name="adddex" type="checkbox" x-model="adddex" style="width: auto">
 					</div>
+					<div class="interior flex horizontal start" x-show="isarmor" {% if item and item.add_dex %} x-init="stealthdisadvantage=true" {% endif %}>
+						<label for="stealthdisadvantage">Stealth Disadvantage?</label>
+						<input id="stealthdisadvantage" name="stealthdisadvantage" type="checkbox" x-model="stealthdisadvantage" style="width: auto">
+					</div>
 				</div>
 				<div class="interior flex vertical start">
 					<div class="interior flex horizontal start"{% if item and item.is_magical %} x-init="ismagical=true" {% endif %}>
@@ -51,7 +55,7 @@
 					<div style="width: 100%">
 						<label for="tagselect">Add Tag: </label>
 						<select name="tagselect" id="tagselect" x-model="tagselect" style="width: auto" @change="appendTag()" x-init="updateTags()">
-							{% for tag in tags %}
+							{% for tag in cruleset.item_tags %}
 							<option>{{ tag.name }}</option>
 							{% endfor %}
 						</select>
@@ -74,7 +78,7 @@
 					<div style="width: 100%">
 						<label for="propertyselect">Add Weapon Property: </label>
 						<select name="propertyselect" id="propertyselect" x-model="propertyselect" style="width: auto" @change="appendProperty()" x-init="updateProperties()">
-							{% for property in properties %}
+							{% for property in cruleset.item_properties %}
 							<option>{{ property.name }}</option>
 							{% endfor %}
 						</select>
