changed project name to 'wayfarer'; reworked some import code; added some extra item metadata; removed jsonparsers file; added some filtering for allowed subdomains (ruleset identifiers)

--- a/website/templates/create-property.html
+++ b/website/templates/create-property.html
@@ -6,25 +6,42 @@
 
 {% block body %}
 <div class="flex">
-	<div class="flex vertical start" x-data="main">
+	<form class="flex vertical start" x-data="main" method="post">
+		<!-- title -->
 		{% if tproperty %}
 			<h1>Edit {{ tproperty.name }}</h1>
 		{% else %}
 			<h1>Create Weapon Property</h1>
 		{% endif %}
-		<form class="interior flex vertical start" method="post">
-			<input name="name" id="name" x-model="name" placeholder="Weapon Property Name" {% if tproperty %} x-init="name=`{{ tproperty.name }}`" {% endif %}>
-			<textarea name="text" id="text" x-model="text" placeholder="Weapon Property Description" {% if tproperty %} x-init="text=`{{ tproperty.text }}`" {% endif %}></textarea>
-			{% if tproperty %}
-				<a><button type="submit">Submit Changes</button></a>
-			{% else %}
-				<a><button type="submit">Create Weapon Property!</button></a>
-			{% endif %}
-		</form>
+
+		<!-- name -->
+		<input name="name" id="name" x-model="name" placeholder="Weapon Property Name" {% if tproperty %} x-init="name=`{{ tproperty.name }}`" {% endif %}>
+
+		<!-- boolean values -->
+		<div class="interior flex horizontal space-around" style="width: 100%">
+			<div class="interior flex horizontal center">
+				<label for="showversatile">Show Versatile?</label>
+				<input type="checkbox" name="showversatile" id="showversatile" x-model="showversatile" {% if tproperty and tproperty.displays_versatile %} x-init="showversatile=true" {% endif %}>
+			</div>
+			<div class="interior flex horizontal center">
+				<label for="showrange">Show Range?</label>
+				<input type="checkbox" name="showrange" id="showrange" x-model="showrange" {% if tproperty and tproperty.displays_range %} x-init="showrange=true" {% endif %}>
+			</div>
+		</div>
+
+		<!-- text -->
+		<textarea name="text" id="text" x-model="text" placeholder="Weapon Property Description" {% if tproperty %} x-init="text=`{{ tproperty.text }}`" {% endif %}></textarea>
+
+		<!-- preview -->
 		<h2 x-text="name"></h2>
 		<hr>
 		<div class="usercontent" x-html="convert(text)"></div>
-	</div>
+		{% if tproperty %}
+			<a><button type="submit">Submit Changes</button></a>
+		{% else %}
+			<a><button type="submit">Create Weapon Property!</button></a>
+		{% endif %}
+	</form>
 </div>
 
 {% endblock %}
