--- a/website/templates/import-item.html
+++ b/website/templates/import-item.html
@@ -1,12 +1,8 @@
-{% extends "import-two.html" %}
+{% extends "import-one.html" %}
 
 {% block warnings %}
 {% endblock %}
 
-{% block instructionsone %}
-<label for="feature_file"><h2>Items File (items.json)</h2></label>
-{% endblock %}
-
-{% block instructionstwo %}
-<label for="flavor_file"><h2>Template Items File (items-base.json)</h2></label>
+{% block instructions %}
+<label for="file"><h2>Items File (items.json)</h2></label>
 {% endblock %}
