--- a/website/static/css/input.css
+++ b/website/static/css/input.css
@@ -38,6 +38,7 @@ input[type=number]::-webkit-inner-spin-buttton, input[type=number]::-webkit-oute
 input, select {
     box-sizing: border-box;
     padding: 8px;
+    max-width: calc(100% - 16px);
 }
 
 input[type=checkbox] {
