--- a/website/templates/create-background.html
+++ b/website/templates/create-background.html
@@ -12,7 +12,7 @@
 		{% else %}
 			<h1>Create a Background</h1>
 		{% endif %}
-		<div class="interior flex vertical start">
+		<div class="interior flex vertical start" style="width: 100%">
 			<input name="name" id="name" x-model="name" placeholder="Background Name" {% if tbackground %} x-init="name=`{{ tbackground.name }}`" {% endif %}>
 			{% if not cruleset.skills %}
 				<div class="mild danger">
@@ -58,6 +58,9 @@
 						<select name="tools" id="tools" x-model="toolselect" style="width: auto" @change="appendTool()">
 							{% for tool in tools %}
 							<option>{{ tool.name }}</option>
+							{% endfor %}
+							{% for type in cruleset.item_tags %}
+							<option>{{ type.name }}</option>
 							{% endfor %}
 						</select>
 					</div>
@@ -187,10 +190,10 @@
 				</div>
 			</template>
 		</div>
-		{% if background %}
-			<a><button type="submit">Create Background!</button></a>
-		{% else %}
+		{% if tbackground %}
 			<a><button type="submit">Submit Changes</button></a>
+		{% else %}
+			<a><button type="submit">Create Background!</button></a>
 		{% endif %}
 	</form>
 
