--- a/website/templates/import-property.html
+++ b/website/templates/import-property.html
@@ -4,5 +4,5 @@
 {% endblock %}
 
 {% block instructions %}
-<label for="file"><h2>Races File (races.json)</h2></label>
+<label for="file"><h2>Item Properties File (item-properties.json)</h2></label>
 {% endblock %}
