--- a/website/templates/import-stat.html
+++ b/website/templates/import-stat.html
@@ -4,5 +4,5 @@
 {% endblock %}
 
 {% block instructions %}
-<label for="file"><h2>Races File (races.json)</h2></label>
+<label for="file"><h2>Ability Scores File (ability-scores.json)</h2></label>
 {% endblock %}
