--- a/website/templates/import-tag.html
+++ b/website/templates/import-tag.html
@@ -4,5 +4,5 @@
 {% endblock %}
 
 {% block instructions %}
-<label for="file"><h2>Races File (races.json)</h2></label>
+<label for="file"><h2>Item Tags File (item-tags.json)</h2></label>
 {% endblock %}
