--- a/website/templates/master.html
+++ b/website/templates/master.html
@@ -17,7 +17,7 @@
     <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
 	<script src="https://unpkg.com/showdown/dist/showdown.min.js"></script>
 	<script src="{{ url_for('static', filename='js/master.js') }}"></script>
-	<title>{{ title }} | Wayfinder {{ cruleset.name }}</title>
+	<title>{{ title }} | Wayfarer {{ cruleset.name }}</title>
 	{% block head %}{% endblock %}
 </head>
 
